fix(add another): update gap for inline layout to match govuk-column gap

--- a/src/moj/components/add-another/_add-another.scss
+++ b/src/moj/components/add-another/_add-another.scss
@@ -62,7 +62,7 @@
 
     .moj-add-another__item-container {
       display: flex;
-      gap: govuk-spacing(4);
+      gap: govuk-spacing(6);
       justify-content: space-between;
       border-bottom: none;
     }
